--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@babel/plugin-proposal-decorators": "^7.10.5",
+      "@types/classnames": "^2.2.10",
       "@types/lodash": "^4.14.159",
       "@types/node": "^14.6.0",
       "@types/react": "^16.9.46",
       "@types/react-dom": "^16.9.8",
-      "ts-node": "8.10.2",
-      "typescript": "3.9.7"
+      "ts-node": "^8.10.2",
+      "typescript": "^4.0.2"
    },
    "dependencies": {
       "lodash": "^4.17.20",
