--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@babel/plugin-proposal-decorators": "^7.10.5",
+      "@babel/plugin-syntax-top-level-await": "^7.10.4",
       "@types/classnames": "^2.2.10",
       "@types/lodash": "^4.14.159",
       "@types/node": "^14.6.0",
