--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
       "typescript": "^4.0.2"
    },
    "dependencies": {
+      "@types/jsonwebtoken": "^8.5.0",
+      "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.20",
       "mysql": "^2.14.1",
       "next": "^9.5.2",
