--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "@babel/plugin-proposal-decorators": "^7.10.5",
       "@babel/plugin-syntax-top-level-await": "^7.10.4",
       "@types/classnames": "^2.2.10",
+      "@types/cookie": "^0.4.0",
       "@types/lodash": "^4.14.159",
       "@types/node": "^14.6.0",
       "@types/react": "^16.9.46",
@@ -15,6 +16,8 @@
    },
    "dependencies": {
       "@types/jsonwebtoken": "^8.5.0",
+      "axios": "^0.20.0",
+      "cookie": "^0.4.1",
       "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.20",
       "mysql": "^2.14.1",
